# Info-Mosaic

./: .gitignore  README.md  README_CN.md  ensemble_answer.py  gen_result.py  infer_answer.py  pyproject.toml  requirements.txt  utils.py
data/: info_mosaic_gt_answer.jsonl  prepare_data.py
docs/: index.html  style.css
docs/css/: bulma.min.css  style.css
docs/js/: main.js
eval/: evaluate_all.py  judge_config.yaml  pass_rate_eval.py  run_eval.sh
inference/: __init__.py  gpt5_multi_tool.py  run_infer.py  run_infer.sh  tool_manager.py
inference/configs/: tool_metata.json
inference/model_forwards/: __init__.py  agent_w_multi_tool.py  agent_w_web_tool.py  agent_wo_tool.py  multitool_utils.py
tool_backends/: README.md  README_ZH.md  README_cn.md  REAMDE.md  quick_deploy.sh  run_docker.sh
tool_backends/MCP/: README.md  README_API_KEYS_EN.md  README_API_KEYS_ZH.md  README_SANDBOX_EN.md  README_SANDBOX_ZH.md  cleanup.sh  config_manager.py  deploy_server.sh  deploy_sse_servers.sh  io_manage.py  mcp_client.py  mcp_manager.py  proxy_service.py  tool_caller.py  tool_server.py  utils.py
tool_backends/MCP/config/: agent_tools.json  api_keys.template.json  server_list.json
tool_backends/api_proxy/: api_server.py  models.py  tool_api.py
tool_backends/api_proxy/api_utils/: fetch_web_page_api.py  pdf_read_api.py  web_search_api.py
tool_backends/configs/: llm_call.json  mcp_config.json  web_agent.json
tool_backends/test/: biomcp_test.py  fmp_test.py  googlemap_test.py  serper_test.py  test_all.py  websearch_test.py  youtube_test.py
(+26 files in other folders)
