[project]
name = "infomosaic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.118.0",
    "fastmcp>=2.12.4",
    "fitz>=0.0.1.dev2",
    "flask>=3.1.2",
    "google-search-results>=2.4.2",
    "googlemaps>=4.10.0",
    "httpx>=0.28.1",
    "mcp>=1.15.0",
    "narwhals>=2.6.0",
    "openai>=2.0.1",
    "pyext>=0.7",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
    "serpapi>=0.1.5",
    "slowapi>=0.1.9",
    "tiktoken>=0.11.0",
    "transformers>=4.56.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
